test/parser/positive/StringLiterals.java
public class StringLiterals {
  public StringLiterals() {}
  protected String x = "foo";
}
