test/parser/negative/UnicodeInput.java
public class UnicodeInput {
    public UnicodeInput(){}
  final String x = "ᚪᚾᛁᛣᚩᛞᛖ";
}
